--- a/app/views/admin/shared/_main_menu.html.slim
+++ b/app/views/admin/shared/_main_menu.html.slim
@@ -12,27 +12,25 @@ nav.navbar.navbar-default
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         - @main_menu.each do |item, options|
-        li class=(options[:active] ? 'active' : '')
-        = link_to options[:path] do
-          = options[:name]
-          - if options[:active]
-            span.sr-only (current)
-              ul.nav.navbar-nav.navbar-right
-                li
-                  a href="#"  Link
-                                          li.dropdown
-  a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
-  | Dropdown
-  span.caret
-  ul.dropdown-menu
-  li
-  a href="#"  Action
-  li
-  a href="#"  Another action
-  li
-  a href="#"  Something else here
-  li.divider role="separator"
-  li
-  a href="#"  Separated link
+          li class=(url_options[:active] ? 'active' : '')
+            = link_to url_options[:path] do
+              = url_options[:name]
+              - if url_options[:active]
+                span.sr-only (current)
+      ul.nav.navbar-nav.navbar-right
+        li.dropdown
+          a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
+            | Dropdown
+            span.caret
+          ul.dropdown-menu
+            li
+              a href="#"  Action
+            li
+              a href="#"  Another action
+            li
+              a href="#"  Something else here
+            li.divider role="separator"
+            li
+              a href="#"  Separated link
                 /! /.navbar-collapse
                 /! /.container-fluid
