create view new

--- a/app/views/admin/teachers/index.html.slim
+++ b/app/views/admin/teachers/index.html.slim
@@ -1,5 +1,6 @@
-h3 Преподаватели
-table.table.table-bordered
+h3 Викладачі
+= link_to 'Додати нового викладача', new_admin_teacher_path, class: 'btn btn-success pull-right'
+table.table.table-striped
   thead
     tr
       th Имя
