--- a/app/views/admin/teachers/_form.html.slim
+++ b/app/views/admin/teachers/_form.html.slim
@@ -1,5 +1,7 @@
-= simple_form_for [:admin, @teacher] do |f|
-= f.input :first_name
-= f.input :last_name
-= f.input :description
-= f.button :submit, 'Сохранить'
+= simple_form_for [:admin, @teacher], wrapper: :horizontal_form do |f|
+  = f.input :first_name
+  = f.input :last_name
+  = f.input :description
+  .col-md-11.col-md-offset-3.button_box
+    = f.button :submit, 'Сохранить', class: 'btn btn-primary'
+    = link_to 'Повернутись', admin_teachers_path, class: 'btn btn-default'
