--- a/app/views/admin/shared/_main_menu.html.slim
+++ b/app/views/admin/shared/_main_menu.html.slim
@@ -17,7 +17,7 @@ nav.navbar.navbar-default
               = url_options[:name]
               - if url_options[:active]
               span.sr-only (current)
-        = link_to 'Вакладачі', admin_teachers_path, class: 'navbar-brand'
+        = link_to 'Викладачі', admin_teachers_path, class: 'navbar-brand'
       ul.nav.navbar-nav.navbar-right
         li.dropdown
           a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
