--- a/app/views/admin/teachers/_form.html.slim
+++ b/app/views/admin/teachers/_form.html.slim
@@ -5,3 +5,4 @@
   .col-md-11.col-md-offset-3.button_box
     = f.button :submit, 'Сохранить', class: 'btn btn-primary'
     = link_to 'Повернутись', admin_teachers_path, class: 'btn btn-default'
+    = link_to 'Видалити', [admin: @teacher], class: 'btn btn-danger', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} if @teacher.persisted?
