--- a/app/views/admin/teachers/index.html.slim
+++ b/app/views/admin/teachers/index.html.slim
@@ -9,4 +9,5 @@ table.table.table-striped
       th Описание
   tbody
     = render @teachers
+= paginate @teachers, :theme => 'twitter-bootstrap-3'
 
