add gem breadcrums

--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -12,6 +12,10 @@ html
     .container
       .row
         .col-md-12
+          ol.breadcrumb
+            = render_breadcrumbs tag: :li, separator: ''
+      .row
+        .col-md-12
           = render_flash
       .row
         .col-md-12
