make some fixes in discipline

--- a/app/views/admin/disciplines/_discipline.html.slim
+++ b/app/views/admin/disciplines/_discipline.html.slim
@@ -5,4 +5,4 @@ tr
       span.glyphicon.glyphicon-pencil aria-hidden="true"
       = link_to [:admin, discipline], class: 'btn btn-danger btn-sm', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} do
       span.glyphicon.glyphicon-trash aria-hidden="true"
-  td= teacher.name
+  td= discipline.name
