--- a/app/views/admin/disciplines/index.html.slim
+++ b/app/views/admin/disciplines/index.html.slim
@@ -1,10 +1,10 @@
-h3 Викладачі
+h3 Дисципліни
 = link_to 'Додати нову дисципліну', new_admin_discipline_path, class: 'btn btn-success pull-right'
 table.table.table-striped
   thead
     tr
       th
-      th Имя
+      th Назва
   tbody
     = render @disciplines
 = paginate @disciplines, :theme => 'twitter-bootstrap-3'
