--- a/app/views/admin/shared/_main_menu.html.slim
+++ b/app/views/admin/shared/_main_menu.html.slim
@@ -8,6 +8,7 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
       = link_to 'Onschool', admin_root_path, class: 'navbar-brand'
+      - if current_admin
     /! Collect the nav links, forms, and other content for toggling
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
