--- a/app/views/admin/shared/_main_menu.html.slim
+++ b/app/views/admin/shared/_main_menu.html.slim
@@ -18,6 +18,7 @@ nav.navbar.navbar-default
               = url_options[:name]
               - if url_options[:active]
               span.sr-only (current)
+      = link_to 'Курси', admin_courses_path, class: 'navbar-brand'
       = link_to 'Викладачі', admin_teachers_path, class: 'navbar-brand'
       = link_to 'Дисципліни', admin_disciplines_path, class: 'navbar-brand'
       ul.nav.navbar-nav.navbar-right
