--- a/app/views/admin/courses/_course.html.slim
+++ b/app/views/admin/courses/_course.html.slim
@@ -1,10 +1,10 @@
 tr
   td
-    .btn-group-vertical role='group'
+    .btn-group-vertical role="group"
       = link_to [:edit, :admin, course], class: 'btn btn-primary btn-sm' do
       span.glyphicon.glyphicon-pencil aria-hidden="true"
       = link_to [:admin, course], class: 'btn btn-danger btn-sm', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} do
       span.glyphicon.glyphicon-trash aria-hidden="true"
   td= course.name
-  td= course.discipline.name
   td= course.teacher.last_name
+  td= course.disciplines_names
