--- a/app/views/admin/courses/_form.html.slim
+++ b/app/views/admin/courses/_form.html.slim
@@ -1,6 +1,9 @@
 = simple_form_for [:admin, @course], wrapper: :horizontal_form do |f|
   = f.input :name
-  = f.association :teacher
+  = f.association :teacher,
+          collection: Teacher.all.decorate,
+          label_method: :full_name,
+          value_method: :id
   = f.association :discipline
   .col-md-11.col-md-offset-3.button_box
     = f.button :submit, 'Сохранить', class: 'btn btn-primary'
