--- a/app/views/admin/courses/index.html.slim
+++ b/app/views/admin/courses/index.html.slim
@@ -8,6 +8,6 @@ table.table.table-striped
       th Дисципліна
       th Викладач
   tbody
-    = render @courses
+    = render @courses.decorate
 = paginate @courses, :theme => 'twitter-bootstrap-3'
 
