--- a/app/views/admin/lessons/_form.html.slim
+++ b/app/views/admin/lessons/_form.html.slim
@@ -1,8 +1,8 @@
-= simple_form_for [:admin, @lesson], wrapper: :horizontal_form, html: {class: 'form-horisontal'} do |f|
+= simple_form_for [:admin, @course, @lesson], wrapper: :horizontal_form, html: {class: 'form-horisontal'} do |f|
   = f.input :name
   = f.input :description
   .row
     .col-md-11.col-md-offset-3.button_box
       = f.button :submit, 'Сохранить', class: 'btn btn-primary'
-      = link_to 'Повернутись', admin_course_lessons_path, class: 'btn btn-default'
-      = link_to 'Видалити', [:admin, @lesson], class: 'btn btn-danger', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} if @lesson.persisted?
+      = link_to 'Повернутись', [:admin, @course, :lessons], class: 'btn btn-default'
+      = link_to 'Видалити', [:admin, @course, @lesson], class: 'btn btn-danger', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} if @lesson.persisted?
