--- a/app/views/admin/lessons/index.html.slim
+++ b/app/views/admin/lessons/index.html.slim
@@ -7,6 +7,6 @@ table.table.table-striped
       th Назва
       th Опис
   tbody
-    = render @courses.decorate
+    = render @lessons
 = paginate @courses, :theme => 'twitter-bootstrap-3'
 
