--- a/app/views/admin/courses/_form.html.slim
+++ b/app/views/admin/courses/_form.html.slim
@@ -1,5 +1,15 @@
-h3 Новий курс
-hr
+= simple_form_for [:admin, @course], wrapper: :horizontal_form, html: {class: 'form-horizontal'}  do |f|
+  = f.input :name
+  = f.input :description
+  = f.association :teacher,
+          collection: Teacher.all.decorate,
+          label_method: :full_name,
+          value_method: :id
+  = f.association :discipline
 
-= render 'form'
-
+  .row
+    .col-md-11.col-md-offset-3.button_box
+      = f.button :submit, 'Зберегти', class: 'btn btn-primary'
+      = link_to 'Відмінити', admin_courses_path, class: 'btn btn-default'
+      = link_to 'Видалити', [:admin, @course], class: 'btn btn-danger', method: :delete,
+              data: {confirm: 'Бажаєте видалити?'} if @course.persisted?
