--- a/app/views/admin/lessons/index.html.slim
+++ b/app/views/admin/lessons/index.html.slim
@@ -3,10 +3,10 @@ h3 Уроки
 table.table.table-striped
   thead
     tr
-      th
+      th Дії
       th Назва
       th Опис
   tbody
     = render @lessons
-= paginate @courses, :theme => 'twitter-bootstrap-3'
+= paginate @lessons, :theme => 'twitter-bootstrap-3'
 
