--- a/app/views/admin/disciplines/_discipline.html.slim
+++ b/app/views/admin/disciplines/_discipline.html.slim
@@ -1,8 +1,9 @@
 tr
   td
-    .btn-group-vertical role='group'
-      = link_to [:edit, :admin, discipline], class: 'btn btn-primary btn-sm' do
-      span.glyphicon.glyphicon-pencil aria-hidden="true"
-      = link_to [:admin, discipline], class: 'btn btn-danger btn-sm', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} do
-      span.glyphicon.glyphicon-trash aria-hidden="true"
+    .btn-group-vertical role="group"
+      = link_to [:edit, :admin, discipline], class: 'btn btn-primary bt-sm' do
+        span.glyphicon.glyphicon-pencil[aria-hidden="true"]
+      = link_to [:admin, discipline], class: 'btn btn-danger btn-sm', method: :delete,
+              data: {confirm: 'Бажаєте видалити?'} do
+        span.glyphicon.glyphicon-trash[aria-hidden="true"]
   td= discipline.name
