--- a/app/views/admin/lessons/_lesson.html.slim
+++ b/app/views/admin/lessons/_lesson.html.slim
@@ -1,9 +1,10 @@
 tr
   td
     .btn-group-vertical role="group"
-      = link_to [:edit, :admin, @course, @lesson], class: 'btn btn-primary btn-sm' do
-      span.glyphicon.glyphicon-pencil aria-hidden="true"
-      = link_to [:admin, @course, @lesson], class: 'btn btn-danger btn-sm', method: :delete, data: {confirm: 'Дійсно хочете видалити?'} do
-      span.glyphicon.glyphicon-trash aria-hidden="true"
+      = link_to [:edit, :admin, @course, lesson], class: 'btn btn-primary bt-sm' do
+        span.glyphicon.glyphicon-pencil[aria-hidden="true"]
+      = link_to [:admin, @course, lesson], class: 'btn btn-danger btn-sm', method: :delete,
+              data: {confirm: 'Бажаєте видалити?'} do
+        span.glyphicon.glyphicon-trash[aria-hidden="true"]
   td= lesson.name
   td= lesson.description
