make sortable in lesson

--- a/app/views/admin/lessons/_lesson.html.slim
+++ b/app/views/admin/lessons/_lesson.html.slim
@@ -1,4 +1,6 @@
-tr
+tr id="lesson_#{lesson.id}"
+  td
+    span.handle.glyphicon.glyphicon-magnet
   td
     .btn-group-vertical role="group"
       = link_to [:edit, :admin, @course, lesson], class: 'btn btn-primary bt-sm' do
