--- a/app/views/admin/courses/_form.html.slim
+++ b/app/views/admin/courses/_form.html.slim
@@ -7,6 +7,13 @@
           value_method: :id
   = f.association :discipline
 
+  .panel.panel-default
+    .panel-body
+      = f.simple_fields_for :sections do |section|
+        = render 'section_fields', f: section
+      .links.col-sm-offset-3.col-sm-9
+        = link_to_add_association 'додати секцію', f, :sections, class: 'btn btn-xs btn-success'
+
   .row
     .col-md-11.col-md-offset-3.button_box
       = f.button :submit, 'Зберегти', class: 'btn btn-primary'
