--- a/app/views/admin/lessons/_form.html.slim
+++ b/app/views/admin/lessons/_form.html.slim
@@ -1,6 +1,7 @@
 = simple_form_for [:admin, @course, @lesson], wrapper: :horizontal_form, html: {class: 'form-horisontal'} do |f|
   = f.input :name
-  = f.input :description
+  = f.input :description, input_html: {class: 'tinymce', rows: 40, cols: 120}
+  = tinymce
   .row
     .col-md-11.col-md-offset-3.button_box
       = f.button :submit, 'Сохранить', class: 'btn btn-primary'
